# Museek

./: .gitignore  CONTEXT.md  LICENSE  README.md  index.html  mise.toml  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
docs/: index.html
src/: App.tsx  fonts.css  globals.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  Info.dev.plist  Info.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/infoplist/en.lproj/: InfoPlist.strings
src-tauri/infoplist/zh-Hans.lproj/: InfoPlist.strings
src-tauri/src/: lib.rs  main.rs  update_race.rs
src/components/: CloseGuard.tsx  DownloadLocationDialog.tsx  PlaylistCard.tsx  TrackRow.tsx
src/components/brand/: BrandMark.tsx
src/components/common/: CoverImage.tsx  ListSkeletons.tsx  MetaBadges.tsx  PlatformTabs.tsx  PlaylistCard.tsx  SpecularFrame.tsx  TrackRow.tsx  VirtualList.tsx
src/components/layout/: RootLayout.tsx  Sidebar.tsx  SidebarUpdateCard.tsx  TopBar.tsx  WindowControls.tsx
src/components/lyrics/: LyricsPanel.tsx
src/components/player/: Controls.tsx  PlayerBar.tsx  ProgressSlider.tsx  VolumeControl.tsx
src/components/queue/: PlayQueue.tsx
src/components/search/: HotSearchCloud.tsx
src/components/settings/: AboutSettings.tsx  CacheSettings.tsx  DataSettings.tsx  DownloadSettings.tsx  LocalSettings.tsx  PlaybackSettings.tsx  SettingHeader.tsx  SettingsCard.tsx  ShortcutsSettings.tsx  SourceManager.tsx  ThemeSettings.tsx
src/components/songCategories/: CategoryAssignItems.tsx  (+4 more)
src/hooks/: useDragSort.ts  useFlip.ts
src/lib/: audio.ts  audioBytes.ts  audioUrlProbe.ts  cache.ts  cdnHeaders.ts  configIO.ts  cover.ts  db.ts  http.ts  i18n.ts  lockdown.ts  lxApi.ts  lxMusicInfo.ts  lyric.ts  lyricsFullscreen.ts  mediaCache.ts  notify.ts  os.ts  playback.ts  power.ts  quality.ts  shortcuts.ts  showWindow.ts  smtc.ts  sourceRunner.ts  sync.ts  updater.ts  utils.ts
src/routes/: Downloads.tsx  Favorites.tsx  HotPlaylists.tsx  Library.tsx  LocalMusic.tsx  Playlist.tsx  Search.tsx  Settings.tsx
src/stores/: downloadStore.ts  localMusicStore.ts  playerStore.ts  playlistStore.ts  searchStore.ts  settingsStore.ts  sourceStore.ts  themeStore.ts  uiStore.ts  updateStore.ts
src/types/: music.ts  player.ts  source.ts
(+55 files in other folders)
