[package]
name = "museek"
version = "1.0.0"
description = "Museek 拾音 — Desktop Music Aggregator"
authors = ["you"]
edition = "2021"

[lib]
name = "museek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
souvlaki = "0.7.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Windows taskbar thumbnail toolbar (hover-over-taskbar media buttons). Reuses the
# same `windows` crate version Tauri already pulls in, just with extra features.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

