[package]
name = "museek"
version = "1.1.1"
description = "Museek 拾音 — Desktop Music Aggregator"
authors = ["you"]
edition = "2021"

[lib]
name = "museek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
souvlaki = "0.7.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2"

# Windows taskbar thumbnail toolbar (hover-over-taskbar media buttons). Reuses the
# same `windows` crate version Tauri already pulls in, just with extra features.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Power",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"] }
url = "2"

